--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": ["src/**/*.ts","migrations/**/*.ts"],
+
+  "exclude": ["node_modules"]
 }
